# BootBot

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-build-and-push-local.sh
.github/workflows/: dockerhub.yml
src/: constants.rs  discord.rs  error.rs  main.rs  prediction.rs
src/discord/commands/: boots.rs  mod.rs  model.rs  version.rs
src/prediction/: data.rs
