[package]
name = "boot_bot"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12.0"
tokio = "1.36.0"
linfa = "0.7.0"
linfa-trees = { version = "0.7.0", features = ["serde"] }
ndarray = "0.15.6"
reqwest = { version="0.11.24", features = ["blocking"] }
serde_json = "1.0.113"
serde = "1.0.196"
bincode = "1.3.3"